--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ html {
 body {
   min-width: 320px;
   width: 100%;
+  height: 15000px;
   margin: 0;
   background: #FEFEFE;
   font-size: 1.6rem;
@@ -32,6 +33,37 @@ ul, ol {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  height: 7rem;
+}
+.header img {
+  margin-left: 2.1rem;
+}
+.header p {
+  margin-right: auto;
+  margin-left: 1.6rem;
+  font-size: 1.4rem;
+  font-weight: 900;
+  line-height: 1.3;
+}
+.header p strong {
+  font-size: 1.8rem;
+}
+.header li {
+  line-height: 7rem;
+  list-style: none;
+  display: table-cell;
+  height: 7rem;
+  padding: 0 1.5rem;
+  font-weight: 700;
+}
+.header .item6 {
+  background: #2498b3;
+  color: #FEFEFE;
 }
 
 /*# sourceMappingURL=style.css.map */
