--- a/css/style.scss
+++ b/css/style.scss
@@ -1,9 +1,10 @@
 
-
 // variables
 $color--black: #2C363F;
 $color--white: #FEFEFE;
 $color--green: #5DAB92;
+$color--red: #ff0000;
+$color--blue: #2498b3;
 
 // mixin
 @mixin breakpoint($point) {
@@ -23,12 +24,14 @@ $color--green: #5DAB92;
 
 // base
 html {
-    font-size: 62.5%;
+    font-size: 62.5%; //remを使用するための設定 ベースを16pxから10pxにする 1rem=10pxになる
 }
 
 body {
     min-width: 320px;
     width: 100%;
+    //スクロールバーを表示
+    height: 15000px;
     margin: 0;
     background: $color--white;
     font-size: 1.6rem;
@@ -59,13 +62,43 @@ a {
 }
 
 
-
-
-
-
-
-
-
-
-
+.header {
+    //flexの設定
+    display: flex;
+    //flexの設定 縦方向真ん中に要素を表示
+    align-items: center;
+    height: 7rem;
+    img {
+        margin-left: 2.1rem;
+    }
+    p {
+        //リストを右端に表示
+        margin-right: auto;
+        margin-left: 1.6rem;
+        font-size: 1.4rem;
+        font-weight: 900;
+        line-height: 1.3;
+        strong {
+            font-size: 1.8rem;
+        }
+    }
+    li {
+        //縦方向の文字表示位置を真ん中へ
+        line-height: 7rem;
+        //リストの・を非表示
+        list-style: none;
+        //リストを横並びに 
+        //・inlineだと高さが指定できない
+        //・inline-blockだと横に少しのスペースができてしまう
+        display: table-cell;
+        //高さをヘッダータグに合わせる
+        height: 7rem;
+        padding: 0 1.5rem;
+        font-weight: 700;
+    }
+    .item6 {
+        background: $color--blue;
+        color: $color--white;
+    }
+}
 
