--- a/css/style.scss
+++ b/css/style.scss
@@ -68,6 +68,7 @@ a {
     //flexの設定 縦方向真ん中に要素を表示
     align-items: center;
     height: 7rem;
+    background: $color--white;
     img {
         margin-left: 2.1rem;
     }
@@ -101,4 +102,34 @@ a {
         color: $color--white;
     }
 }
+
+
+.main {
+    top: -7rem;
+    .bg-img1 {
+        height: 650px;
+        background-image: url("../images/bg-hero1.png");
+        background-repeat: no-repeat;
+        background-position: center center;
+    }
+    .bg-img2 {
+        height: 650px;
+        background-image: url("../images/bg-hero2.png");
+        background-repeat: no-repeat;
+        background-position: center center;
+    }
+    .bg-img3 {
+        height: 650px;
+        width: 100%;
+        background-image: url("../images/bg-hero3.png");
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        background-attachment: fixed; //画面スクロールしたときに画像は固定
+    }
+}
+
+
+
+
 
