--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,8 @@ h1, h2, h3, h4, h5, h6, p, figure {
 
 ul, ol {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -35,40 +37,60 @@ a {
   text-decoration: none;
 }
 
-.header {
+.l-header {
+  position: fixed;
+  width: 100%;
   display: flex;
-  align-items: center;
+  justify-content: space-between;
   height: 7rem;
   background: #FEFEFE;
 }
-.header img {
+.l-header .left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.l-header .left img {
   margin-left: 2.1rem;
 }
-.header p {
-  margin-right: auto;
+.l-header .left p {
   margin-left: 1.6rem;
   font-size: 1.4rem;
   font-weight: 900;
   line-height: 1.3;
 }
-.header p strong {
+.l-header .left p .paragraph-bold {
   font-size: 1.8rem;
 }
-.header li {
-  line-height: 7rem;
-  list-style: none;
-  display: table-cell;
+.l-header .right ul {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+.l-header .right ul li {
   height: 7rem;
+  line-height: 7rem;
   padding: 0 1.5rem;
   font-weight: 700;
+  background: blue;
 }
-.header .item6 {
-  background: #2498b3;
-  color: #FEFEFE;
+.l-header .right ul li:hover li {
+  background: green;
+  display: flex;
+}
+.l-header .right ul ul {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+.l-header .right ul ul li {
+  display: none;
 }
 
 .main {
-  top: -7rem;
+  z-index: -1;
+  position: relative;
+  padding-top: 7rem;
 }
 .main .bg-img1 {
   height: 650px;
